--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -69,7 +69,6 @@
                 <li class="grey dropdown-modal">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <i class="ace-icon fa fa-tasks"></i>
-                        <span class="badge badge-grey">4</span>
                     </a>
 
                     <ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
@@ -146,7 +145,6 @@
                 <li class="purple dropdown-modal">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <i class="ace-icon fa fa-bell icon-animated-bell"></i>
-                        <span class="badge badge-important">8</span>
                     </a>
 
                     <ul class="dropdown-menu-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
@@ -214,7 +212,6 @@
                 <li class="green dropdown-modal">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <i class="ace-icon fa fa-envelope icon-animated-vertical"></i>
-                        <span class="badge badge-success">5</span>
                     </a>
 
                     <ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
@@ -431,6 +428,34 @@
                         </ul>
                     </li>
 
+                    <li class="sidebar-item has-son">
+                        <a href="#" class="dropdown-toggle">
+                            <i class="menu-icon fa fa-camera"></i>
+                            <span class="menu-text"> 快照任务 </span>
+
+                            <b class="arrow fa fa-angle-down"></b>
+                        </a>
+
+                        <b class="arrow"></b>
+
+                        <ul class="submenu">
+                            <li class="sidebar-item active">
+                                <a href="/isadmin/add_task" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    添加任务
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="/isadmin/tasks" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    任务视图
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                        </ul>
+                    </li>
+
                     <li class="sidebar-item">
                         <a href="/isadmin/one_button" target="main-iframe">
 							<i class="menu-icon fa  fa-bolt"></i>
@@ -442,7 +467,7 @@
 
                     <li class="sidebar-item has-son">
                         <a href="#" class="dropdown-toggle">
-                            <i class="menu-icon fa fa-pencil-square-o"></i>
+                            <i class="menu-icon fa  fa-bar-chart-o"></i>
                             <span class="menu-text"> 数据报表 </span>
 
                             <b class="arrow fa fa-angle-down"></b>
@@ -528,6 +553,34 @@
                                     比对结果表
                                 </a>
 
+                                <b class="arrow"></b>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="sidebar-item has-son">
+                        <a href="#" class="dropdown-toggle">
+                            <i class="menu-icon glyphicon glyphicon-list"></i>
+                            <span class="menu-text"> 日志管理 </span>
+
+                            <b class="arrow fa fa-angle-down"></b>
+                        </a>
+
+                        <b class="arrow"></b>
+
+                        <ul class="submenu">
+                            <li class="sidebar-item">
+                                <a href="/isadmin/history_log" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    历史日志
+                                </a>
+                                <b class="arrow"></b>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="/isadmin/real_time_log" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    实时日志
+                                </a>
                                 <b class="arrow"></b>
                             </li>
                         </ul>
