--- a/mysite/isadmin/templates/isadmin/one_button.html
+++ b/mysite/isadmin/templates/isadmin/one_button.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta charset="utf-8" />
-		<title>一键功能</title>
+    <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <title>一键功能</title>
 
-		{% load static %}
+    {% load static %}
 
     <meta name="description" content="Dynamic tables and grids using jqGrid plugin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -43,9 +43,9 @@
 		<script src="{% static 'isadmin/js/html5shiv.min.js' %}"></script>
 		<script src="{% static 'isadmin/js/respond.min.js' %}"></script>
 		<![endif]-->
-    </head>
+</head>
 
-	<body class="no-skin">
+	<body class="no-skin" style="background-color: white">
         <div class="main-content">
             <div class="main-content-inner">
                 <div class="breadcrumbs ace-save-state" id="breadcrumbs">
@@ -55,20 +55,49 @@
 								<a href="#">Home</a>
 							</li>
 
-							<li>
-								<a href="#">Other Pages</a>
+							<li class="active">
+								<a href="#">一键功能</a>
 							</li>
-							<li class="active">Blank Page</li>
 						</ul><!-- /.breadcrumb -->
                 </div>
                 <div class="page-content">
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- PAGE CONTENT BEGINS -->
-                            <button class="btn btn-primary" onclick="beat_restart()">
-                                <i class="ace-icon glyphicon glyphicon-refresh align-top bigger-125"></i>
-                                重启beat
-                            </button>
+                            <div class="panel panel-success">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">django-celery-beat</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <table style="margin: 0px;" class="table">
+                                <tr>
+                                    <td>
+                                        <button class="btn btn-primary" onclick="beat_start()">
+                                            <i class="ace-icon glyphicon glyphicon-play align-top bigger-125"></i>
+                                            启动beat
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-primary" onclick="beat_stop()">
+                                            <i class="ace-icon glyphicon glyphicon-stop align-top bigger-125"></i>
+                                            停止beat
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-primary" onclick="beat_restart()">
+                                            <i class="ace-icon glyphicon glyphicon-refresh align-top bigger-125"></i>
+                                            重启beat
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </table>
+                                </div>
+                            </div>
                             <div id="message-box"></div>
                             <!-- PAGE CONTENT ENDS -->
                         </div><!-- /.col -->
