1. download有关弹出框的bug修复 2. 任务管理后端代码编写和前后端对接

--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -447,7 +447,7 @@
                                 <b class="arrow"></b>
                             </li>
                             <li class="sidebar-item">
-                                <a href="/isadmin/tasks" target="main-iframe">
+                                <a href="/isadmin/get_tasks" target="main-iframe">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     任务视图
                                 </a>
