完善一下一键功能

--- a/mysite/isadmin/templates/isadmin/task/tasks.html
+++ b/mysite/isadmin/templates/isadmin/task/tasks.html
@@ -89,7 +89,7 @@
                              {% for item in group %}
                                 <!-- PAGE CONTENT BEGINS -->
                                 <div class="col-xs-4">
-                                {% if item.enabled == "0" or item.enabled == 0 %}
+                                {% if  item.enabled == 0 or item.expires_check == 0 %}
                                     <div class="panel panel-default">
                                 {% else %}
                                     <div class="panel panel-success">
