--- a/mysite/isadmin/templates/isadmin/one_button.html
+++ b/mysite/isadmin/templates/isadmin/one_button.html
@@ -127,15 +127,48 @@
 
 		<!-- inline scripts related to this page -->
         <script type="application/javascript">
+            function beat_start() {
+                $.ajax({
+                   url: "/isadmin/beat_start",
+                   success: function (data) {
+                       var status = data["status"];
+                       var message = data["message"];
+                       if(status == "success") {
+                           var element = $('<div class="alert alert-block alert-success"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><p><strong><i class="ace-icon fa fa-check"></i>成功! </strong>'+message+'</p></div>');
+                       } else {
+                           var element = $('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><strong><i class="ace-icon fa fa-times"></i>失败! </strong>'+message+'<br></div>');
+                       }
+                       $("#message-box").append(element);
+                   }
+               });
+            }
+
+            function beat_stop() {
+                $.ajax({
+                   url: "/isadmin/beat_stop",
+                   success: function (data) {
+                       var status = data["status"];
+                       var message = data["message"];
+                       if(status == "success") {
+                           var element = $('<div class="alert alert-block alert-success"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><p><strong><i class="ace-icon fa fa-check"></i>成功! </strong>'+message+'</p></div>');
+                       } else {
+                           var element = $('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><strong><i class="ace-icon fa fa-times"></i>失败! </strong>'+message+'<br></div>');
+                       }
+                       $("#message-box").append(element);
+                   }
+               });
+            }
+
             function beat_restart() {
                 $.ajax({
                    url: "/isadmin/beat_restart",
                    success: function (data) {
                        var status = data["status"];
+                       var message = data["message"]
                        if(status == "success") {
-                           var element = $('<div class="alert alert-block alert-success"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><p><strong><i class="ace-icon fa fa-check"></i>成功! </strong>Beat 重启成功，原进程号：'+data["data"][0]+'，新进程号：'+data["data"][1]+'</p></div>');
+                           var element = $('<div class="alert alert-block alert-success"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><p><strong><i class="ace-icon fa fa-check"></i>成功! </strong>'+message+'</p></div>');
                        } else {
-                           var element = $('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><strong><i class="ace-icon fa fa-times"></i>失败! </strong>'+data["message"]+'<br></div>');
+                           var element = $('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert"><i class="ace-icon fa fa-times"></i></button><strong><i class="ace-icon fa fa-times"></i>失败! </strong>'+message+'<br></div>');
                        }
                        $("#message-box").append(element);
                    }
