--- a/mysite/isadmin/templates/isadmin/db/snapshot_list.html
+++ b/mysite/isadmin/templates/isadmin/db/snapshot_list.html
@@ -161,7 +161,7 @@
 								delOptions:{recreateForm: true, beforeShowForm:beforeDeleteCallback},
                             }
 						},
-						{name:'id',index:'id', width:60, sorttype:"int", editable: true},
+						{name:'id',index:'id', width:60, sorttype:"int", editable: false},
 						{name:'request_url',index:'request_url', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
 						{name:'final_url',index:'final_url', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
 						{name:'screen_shot_path',index:'screen_shot_path', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
