--- a/mysite/isadmin/templates/isadmin/db/suspicious_records_list.html
+++ b/mysite/isadmin/templates/isadmin/db/suspicious_records_list.html
@@ -161,7 +161,7 @@
 								delOptions:{recreateForm: true, beforeShowForm:beforeDeleteCallback},
                             }
 						},
-						{name:'id',index:'id', width:60, sorttype:"int", editable: true},
+						{name:'id',index:'id', width:60, sorttype:"int", editable: false},
 						{name:'ss_id',index:'ss_id', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
                         {name:'unknown_domain',index:'unknown_domain', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
                         {name:'checked',index:'checked', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
