--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -530,6 +530,15 @@
                             </li>
 
                             <li class="sidebar-item">
+                                <a href="/isadmin/malicious_domains_list" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    恶意外链主域名
+                                </a>
+
+                                <b class="arrow"></b>
+                            </li>
+
+                            <li class="sidebar-item">
                                 <a href="/isadmin/snapshot_list" target="main-iframe">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     网页快照表
@@ -551,6 +560,15 @@
                                 <a href="/isadmin/pocr_list" target="main-iframe">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     比对结果表
+                                </a>
+
+                                <b class="arrow"></b>
+                            </li>
+
+                            <li class="sidebar-item">
+                                <a href="/isadmin/dcbp_list" target="main-iframe">
+                                    <i class="menu-icon fa fa-caret-right"></i>
+                                    定时任务表
                                 </a>
 
                                 <b class="arrow"></b>
