--- a/mysite/isadmin/templates/isadmin/db/pubsoc_list.html
+++ b/mysite/isadmin/templates/isadmin/db/pubsoc_list.html
@@ -162,7 +162,7 @@
 								delOptions:{recreateForm: true, beforeShowForm:beforeDeleteCallback},
                             }
 						},
-						{name:'id',index:'id', width:60, sorttype:"int", editable: true},
+						{name:'id',index:'id', width:60, sorttype:"int", editable: false},
 						{name:'mydomain',index:'mydomain', width:200,editable: true,editoptions:{size:"20",maxlength:"50"}},
 						{name:'remark',index:'remark', width:200, sortable:false,editable: true,edittype:"textarea", editoptions:{rows:"2",cols:"20"}}
 					], 
